--- a/templates/ordem_producao.html
+++ b/templates/ordem_producao.html
@@ -72,6 +72,14 @@
             {% endwith %}
         </div>
 
+        <div id="progressContainer" style="display: none;">
+            <p>Importando OP: <span id="currentOP"></span></p>
+            <div class="progress">
+                <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+            </div>
+        </div>
+
+
         <div class="w-100 margin-top p-2">
             <table class="table table-hover table-info">
                 <tr class="table-primary">                        
@@ -205,6 +213,19 @@
 
     document.getElementById('exportExcel').addEventListener('click', function() {
         window.location.href = "{{ url_for('exportar_ordem_producao_excel') }}";
+    });
+
+    
+
+    var socket = io();
+
+    socket.on('import_progress', function(data) {
+        document.getElementById('progressContainer').style.display = 'block';
+        document.getElementById('currentOP').innerText = data.numero_op_visual;
+        var progressBar = document.getElementById('progressBar');
+        progressBar.style.width = data.progress + '%';
+        progressBar.setAttribute('aria-valuenow', data.progress);
+        progressBar.innerText = Math.round(data.progress) + '%';
     });
 
     document.getElementById('importForm').addEventListener('submit', function(event) {
