--- a/templates/ordens_producao_visual.html
+++ b/templates/ordens_producao_visual.html
@@ -81,9 +81,9 @@
 
                     <tr class="table-primary">                        
                         <th>Numero OP</th>
-                        <th>Status da OP</th>
+                        <th>Status de Peso</th>
+                        <th>Status de Fino</th>
                         <th>Item Produzido</th>
-                        <th>Pedido</th>
                         <th>Setor</th>
                         <th>Operador</th>
                         <th>Descrição</th>
@@ -95,9 +95,25 @@
                                  
                     <tr class='{{"table-dark" if row.situação == "Encerrada" else ""}}'>                      
                         <td>{{row.numero_op_visual}}</td>
-                        <td>{{row.situação}}</td>
+                        <td>{%if row.peso_enviado == 0 %}
+                            <div class="progress bg-dark" style= "width: 150px;" role="progressbar" aria-label="Animated striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                           <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 0%"></div>
+                            {%else%}
+                           <div class="progress bg-dark" style= "width: 150px;" role="progressbar" aria-label="Animated striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                           <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: {{((row.peso_retornado / row.peso_enviado)*100)}}%"></div>
+                            {%endif%}
+                        </td>
+                        <td>
+                        {%if row.fino_enviado == 0 %}
+                        <div class="progress bg-dark" style= "width: 150px;" role="progressbar" aria-label="Animated striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 0%"></div>
+                        {%else%}
+                        <div class="progress bg-dark" style= "width: 150px;" role="progressbar" aria-label="Animated striped example" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: {{((row.fino_retornado / row.fino_enviado)*100)}}%"></div>
+                    
+                        {%endif%}
+                        </td>
                         <td>{{row.item}}</td>
-                        <td>{{row.piv}}</td>
                         <td>{{row.setor}}</td>
                         <td>{{row.operador}}</td>
                         <td>{{row.descrição[0:30]}}</td>
@@ -172,11 +188,10 @@
                     </tr>
                     <tr class='{{"table-dark" if row.situação == "Encerrada" else ""}}' style="border-bottom: 6px solid #82a6e9 !important;" >                      
                     
-                        
+                        <td>Pedido :{{row.piv}}</td>
                         <td><b>Peso Env.: </b>{{row.peso_enviado}}<b> / Rec.: </b> {{row.peso_retornado}}</td>
                         <td><b>Fino Env.: </b>{{row.fino_enviado}}<b> / Rec.:</b>{{row.fino_retornado}}</td> 
                         <td><b>Data: </b>{{row.data_abertura}}</td> 
-                        <td><b>Hora: </b>{{row.hora_abertura}}hs</td>
                         <td colspan="2"><b>Qtd. Estimada : </b>{{row.quantidade}}</td>
                         <td><b> Qtd. Produzida : </b>{{row.quantidade_real}}</td>
                     </tr>
